# VolcanoSensing-LoCUS

./: .gitignore  CMakeLists.txt  build.sh  figures.py  runArenaSizeExperiements.py  runArenaSizeExperiements.sh  runExperiements.sh  runFailures.sh  runFailuresByRmin.py  runFailuresByRmin.sh  runRhoExperiements.py  runRhoExperiements.sh  runSwarmSizeExperiements.py  runSwarmSizeExperiements.sh
LoCUS/argos/: run.sh  runArenaSizeExperiements.py  runExperiement.py  runFailures.sh  runFailuresByRmin.sh  runSwarmSizeExperiements.sh
LoCUS/argos/experiments/: Fault-Tolerance.xml  Fault-Tolerance_template.xml
LoCUS/docker/: README_docker.md
LoCUS/docker/scripts/: trial_runner.py
LoCUS/wheeler/: run_arenasize_statistics.pbs  run_failure_by_rmin_statistics.pbs  run_failure_statistics.pbs
LoCUS/wheeler2/: run_ft_failures.pbs  run_ft_swarm_size.pbs  run_ft_test.pbs  run_unc_test.pbs  run_uncoordinated_perturbed_swarm_size.pbs  run_uncoordinated_swarm_size.pbs  run_unt_failures.pbs
MoBS/argos/: CMakeLists.txt  build.sh  runExperiement.py
MoBS/argos/experiments/: Fault-Tolerance.xml  Fault-Tolerance_template.xml
MoBS/argos/source/: CMakeLists.txt
MoBS/argos/source/faulttolerance/: CMakeLists.txt  ColorUtil.cpp  ColorUtil.h  FaultToleranceLoopFunctions.h  FaultToleranceQTUserFunctions.h  GasGradientDescentMovement.cpp  MoveToPosition.cpp  MoveToPosition.h  MovementVector.cpp  PositionReading.h  SimplePlume.cpp  SpokeSpiralSearch.cpp  SpokeSpiralSearch.h
MoBS/docker/: Dockerfile
MoBS/docker/scripts/: entrypoint.py
argos/: CMakeLists.txt  runExperiement.py  runFailuresByRmin.py  runRhoExperiements.py  runSwarmSizeExperiements.py
argos/experiments/: Fault-Tolerance.xml  Fault-Tolerance_template.xml
argos/source/faulttolerance/: BalanceMovement.h  CMakeLists.txt  CollisionAvoidance.h  ControllerBase.h  EmptyMovement.h  FaultToleranceLoopFunctions.cpp  FaultToleranceLoopFunctions.h  FaultToleranceQTUserFunctions.cpp  FaultToleranceQTUserFunctions.h  GasGradientDescentMovement.cpp  GasGradientDescentMovement.h  MoveTo.h  MoveToPosition.cpp  MoveToPosition.h  Movement.h  MovementVector.h  ReplaceWithHeir.cpp  SimplePlume.cpp  SimplePlume.h  SpiriController.cpp  SpiriController.h  SpokeSpiralSearch.cpp  SpokeSpiralSearch.h  SwarmLocation.h  SwarmLocationImpl.cpp  SwarmLocationImpl.h  SwarmManager.cpp  SwarmManager.h  ThenMovement.cpp  WaypointUtil.h
docker/: Dockerfile
docker/scripts/: entrypoint.py  trial_runner.py
experiments/: Fault-Tolerance.xml  Fault-Tolerance_template.xml
experiments/coverage/arena_size/: Fault-Tolerance_10.xml  Fault-Tolerance_100.xml  Fault-Tolerance_20.xml  Fault-Tolerance_30.xml  Fault-Tolerance_40.xml  Fault-Tolerance_50.xml  Fault-Tolerance_60.xml  Fault-Tolerance_70.xml  Fault-Tolerance_80.xml  Fault-Tolerance_90.xml
experiments/coverage/failures/: Fault-Tolerance_10.xml  Fault-Tolerance_100.xml  Fault-Tolerance_110.xml  Fault-Tolerance_120.xml  Fault-Tolerance_122.xml  Fault-Tolerance_20.xml  Fault-Tolerance_30.xml  Fault-Tolerance_40.xml  Fault-Tolerance_50.xml  Fault-Tolerance_60.xml  Fault-Tolerance_70.xml  Fault-Tolerance_80.xml  Fault-Tolerance_90.xml
experiments/coverage/rho/: Fault-Tolerance_10_16.xml  Fault-Tolerance_11_16.xml  Fault-Tolerance_12_16.xml  Fault-Tolerance_13_16.xml  Fault-Tolerance_14_16.xml  Fault-Tolerance_15_16.xml  Fault-Tolerance_16_16.xml  Fault-Tolerance_1_16.xml  Fault-Tolerance_1_4.xml  Fault-Tolerance_2_16.xml  Fault-Tolerance_2_4.xml  Fault-Tolerance_3_16.xml  Fault-Tolerance_4_16.xml  Fault-Tolerance_4_4.xml  Fault-Tolerance_4_8.xml  Fault-Tolerance_5_8.xml  Fault-Tolerance_6_16.xml  Fault-Tolerance_7_16.xml  Fault-Tolerance_8_16.xml  Fault-Tolerance_9_16.xml
experiments/coverage/roh/: Fault-Tolerance_1_2.xml  Fault-Tolerance_1_8.xml  Fault-Tolerance_2_2.xml  Fault-Tolerance_2_8.xml  (+3 more)
source/faulttolerance/: CMakeLists.txt  Delay.cpp  FaultToleranceController.cpp  FaultToleranceController.h  FaultToleranceLoopFunctions.cpp  FaultToleranceLoopFunctions.h  FaultToleranceQTUserFunctions.cpp  FaultToleranceQTUserFunctions.h  MoveToPosition.cpp  MoveToPosition.h  MovementVector.cpp  ParallelMovement.cpp  ReplaceRootAction.cpp  ReplaceRootAction.h  ReplaceWithHeir.cpp  ReplaceWithHeir.h  SpiriController.cpp  SpiriController.h  SwarmLocationImpl.cpp  SwarmManager.cpp  ThenMovement.cpp  WaitForChildren.cpp  WaitForChildren.h  WaypointUtil.cpp
wheeler/: parallel_statistics.py  run_arenasize_statistics.pbs  run_failure_by_rmin_statistics.pbs  run_failure_statistics.pbs  run_rho_statistics.pbs  run_statistics.pbs  run_swarmsize_statistics.pbs
wheeler2/: run_ft_failures.pbs  run_ft_perturbed_swarm_size.pbs  run_ft_swarm_size.pbs  run_ft_test.pbs  run_unc_test.pbs  run_uncoordinated_failures.pbs  run_uncoordinated_perturbed_swarm_size.pbs  run_uncoordinated_swarm_size.pbs  run_unt_failures.pbs
(+28 files in other folders)
